fix: remove unnecessary scrollbars, make important part of the subtitle bold

--- a/website/src/pages/styles.module.css
+++ b/website/src/pages/styles.module.css
@@ -100,10 +100,6 @@
   justify-content: center; 
 }
 
-.showcaseDescription {
-  overflow-y: scroll;
-}
-
 .buttons {
   display: flex;
   align-items: center;
